some terms updates

--- a/privacy-and-cookies.html
+++ b/privacy-and-cookies.html
@@ -47,7 +47,7 @@
               <ol>
                 <li>We are committed to protecting your privacy. This notice is to explain how we may use personal information we collect before, during and after your working relationship with us and applies to you if you are:
                   <ul>
-                    <li>a user of our website at www.chasedistillery.co.uk</li>
+                    <li>a user of our website at www.dimpseygin.co.uk</li>
                     <li>an individual client (including a sole trader or partnership) who (i) has contacted us to purchase our services/ products/ signed up to newsletter / entered our competitions; or (i) who we have contacted about the services/products we offer as a business.</li>
                     <li>or an employee of a corporate client or group company of a corporate/customer client, who (i) has contacted us to purchase our services/products; or (i) who we have contacted about the services/products we offer as a business.</li>
                     <p>This notice does not form part of any contract to provide services/products.</p>
@@ -90,7 +90,7 @@
               where it is needed in the public interest.
               There are more limited circumstances where we process personal data pursuant to your consent.
 
-              We typically collect personal information about our website users/customers when you create an account on our site at chasedistillery.co.uk to start purchasing services/products or to register your interest in our services/products, when you make a query and/or complaint or when you correspond with us by phone, e-mail or in some other way.
+              We typically collect personal information about our website users/customers when you create an account on our site at dimpseygin.co.uk to start purchasing services/products or to register your interest in our services/products, when you make a query and/or complaint or when you correspond with us by phone, e-mail or in some other way.
               We also may collect personal information about our clients/customers through other sources such as our group companies where you have entered a competition with our Commercial partners indirectly sources who we run competitions we will make all efforts to ensure that appropriate legal basis for this processing is obtained before processing.
               The situations in which we will process your personal information are listed below together with the purpose or purposes for which we are processing or will process your personal information:
               2.2 We may process data about your use of our website and services (“usage data“). The usage data may include your IP address, geographical location, browser type and version, operating system, referral source, length of visit, page views and website navigation paths, as well as information about the timing, frequency and pattern of your service use. The source of the usage data is Google Analytics. This usage data may be processed for the purposes of analysing the use of the website and services to conduct data analytics studies and market research to review and better understand market trends within our industry and markets. The legal basis for this our legitimate interests, namely monitoring and improving our website and services.
