--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -65,7 +65,7 @@
 
               <p>We require a signature for any goods delivered, at which point responsibility for your purchased goods passes to you. If you have specified a
                 recipient who is not you for delivery purposes (for example as a gift) then you accept that evidence of a signature by them (or at that delivery
-                address) is evidence of delivery and fulfilment by Still Chase Distillery and transfer of responsibility in the same way.</p>
+                address) is evidence of delivery and fulfilment by Still Shed Distillery and transfer of responsibility in the same way.</p>
 
                 <p>If possible, please check the condition of your parcel before you sign for it. If it’s at all damaged, don’t sign for it but hand it back to the
                   courier to return to us. If you only discover that your parcel is damaged after you’ve signed for it, please call 07469 931 116 or email
