update delivery/collection info

--- a/index.html
+++ b/index.html
@@ -452,6 +452,9 @@
                     -->
 
                     <p><strong>£35</strong> <small>70cl</small></p>
+                    <p>Free UK shipping on orders over £50</p>
+                    <p>Local collection from Still Shed Distillery is available</p>
+                    <p>Delivery and collections made between Thurs-Sat</p>
 
                   </div> <!-- /.seven-hundred-button -->
 
