Remove shipping offer and add Mulled Dimpsey

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
               <div class="row shopify-buy-buttons">
 
-                                  <div class="seven-hundred-buy-button col-lg-6 col-6">
+                <div class="seven-hundred-buy-button col-lg-6">
                     <!--
                     Shopify button for 70cl Dimpsey
                     -->
@@ -452,13 +452,13 @@
                     -->
 
                     <p><strong>£35</strong> <small>70cl</small></p>
-                    <p>Free UK shipping on orders over £50</p>
                     <p>Local collection from Still Shed Distillery is available</p>
-                    <p>Delivery and collections made between Thurs-Sat</p>
+                    <p>Order despatch and collections made between Thurs-Sat</p>
 
                   </div> <!-- /.seven-hundred-button -->
 
-                  <div class="seven-hundred-buy-button col-lg-6 col-6">
+                  <div class="seven-hundred-buy-button col-lg-6">
+                    <h2>Stockists</h2>
                     <p>We will be at the Wick Farm Wonderland Christmas Market on 14th November!</p>
                     <p>Click <a target="_blank" href="https://fb.me/e/1Q62Rc4VJ">here</a> for more info!</p>
                   </div>
@@ -496,19 +496,19 @@
 
           <div class="col-lg-6 drink-two">
 
-            <h2 class="featurette-heading">Gin & Juice</h2>
+            <h2 class="featurette-heading">Mulled Dimpsey</h2>
             <p class="lead">Ingredients</p>
             <ul>
-              <li>60ml Dimpsey Somerset Gin</li>
-              <li>30ml grapefruit juice</li>
-              <li>Sliced grapefruit</li>
+              <li>100ml Dimpsey Somerset Gin</li>
+              <li>400ml apple juice</li>
+              <li>1 bay leaf, 4 cloves, 2 cardamom pods, 1 cinnamon stick, 1/2 tsp corriander seeds and 1 tsp runny honey</li>
             </ul>
 
             <p class="lead">Instructions</p>
             <ul>
-              <li>Combine gin and grapefruit juice in a cocktail shaker filled with ice</li>
-              <li>Stir well and strain into a chilled martini glass</li>
-              <li>Garnish with grapefruit slice</li>
+              <li>Divide the Dimpsey between four small heatproof glasses</li>
+              <li>Tip the apple juice into a saucepan with the rest of the ingedients. Heat gently until simmering, then strain in to a jug</li>
+              <li>Pour the mulled apple juice into the glasses with the gin and stir gently to combine</li>
             </ul>
 
           </div><!-- /.col-lg-6 description -->
