Updates to terms

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -60,8 +60,7 @@
                 majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.</p>
 
               <h2>Processing Your Order</h2>
-              <p>Our standard spirit delivery is 2-4 working days and is complimentary over a £50 spend. We try to process all orders within 24hrs of receiving them,
-                however, as we use a third party courier, on occasion we do experience some breakages which may delay your order.</p>
+              <p>Our standard spirit delivery is 2-4 working days. Orders are currently despatched between Thursday and Saturday. As we use a third party courier, on occasion we do experience some breakages which may delay your order.</p>
 
               <p>We require a signature for any goods delivered, at which point responsibility for your purchased goods passes to you. If you have specified a
                 recipient who is not you for delivery purposes (for example as a gift) then you accept that evidence of a signature by them (or at that delivery
