Update to delivery and returns

--- a/delivery-and-returns.html
+++ b/delivery-and-returns.html
@@ -41,7 +41,7 @@
 
               <h1>Delivery & Returns</h1>
               <h2>Shipping/Delivery</h2>
-              <p>Our standard spirit delivery is 1-2 working days and is complimentary over a £50 spend.</p>
+              <p>Our standard spirit delivery is 2-4 working days. Orders are currently despatched between Thursday and Saturday.</p>
 
               <p>At the moment, we don’t offer same day delivery or special delivery. Please note that our delivery dates may be affected by public holidays and some
                 geographic locations. Orders placed Monday – Friday (excluding bank holidays) before 11am GMT will be dispatched on the same day.</p>
