--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="row">
                 <div class="col-lg-4">
                   <h3><strong>Nose</strong></h3>
-                  <p>Fragrant juniper, grapefruit & cinnamon</p>
+                  <p>Fragrant mandarin, grapefruit & cinnamon</p>
                 </div>
                 <div class="col-lg-4">
                   <h3><strong>Palette</strong></h3>
@@ -301,6 +301,13 @@
                       },
                       "option": {},
                       "cart": {
+                      "contents": {
+                          "note": true,
+                          "button": true
+                        },
+                        "text": {
+                          "noteDescription": "Add a note, if this is a gift, leave a message and we'll include it!",
+                        },
                         "styles": {
                           "button": {
                             "font-family": "Arial, sans-serif",
@@ -459,8 +466,8 @@
 
                   <div class="seven-hundred-buy-button col-lg-6">
                     <h2>Stockists</h2>
-                    <p>We will be at the Wick Farm Wonderland Christmas Market on 14th November!</p>
-                    <p>Click <a target="_blank" href="https://fb.me/e/1Q62Rc4VJ">here</a> for more info!</p>
+                    <p>We will be at the Lympsham Village Christmas Market on 11th December!</p>
+                    <p>Click <a target="_blank" href="https://www.facebook.com/TheLympshamSportsClub/posts/370568468191173">here</a> for more info!</p>
                   </div>
 
               </div><!-- /.row -->
