--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
               <div class="row shopify-buy-buttons">
 
-                <div class="seven-hundred-buy-button col-lg-6">
+              <div class="seven-hundred-buy-button col-lg-6 col-6">
                     <!--
                     Shopify button for 70cl Dimpsey
                     -->
@@ -301,13 +301,6 @@
                       },
                       "option": {},
                       "cart": {
-                      "contents": {
-                          "note": true,
-                          "button": true
-                        },
-                        "text": {
-                          "noteDescription": "Add a note, if this is a gift, leave a message and we'll include it!",
-                        },
                         "styles": {
                           "button": {
                             "font-family": "Arial, sans-serif",
@@ -459,16 +452,303 @@
                     -->
 
                     <p><strong>£35</strong> <small>70cl</small></p>
-                    <p>Local collection from Still Shed Distillery is available</p>
-                    <p>Order despatch and collections made between Thurs-Sat</p>
 
                   </div> <!-- /.seven-hundred-button -->
 
-                  <div class="seven-hundred-buy-button col-lg-6">
-                    <h2>Stockists</h2>
-                    <p>We will be at the Lympsham Village Christmas Market on 11th December!</p>
-                    <p>Click <a target="_blank" href="https://www.facebook.com/TheLympshamSportsClub/posts/370568468191173">here</a> for more info!</p>
-                  </div>
+                  <div class="fifty-buy-button col-lg-6 col-6">
+
+                    <!--
+                      Start button for Dimpsey 5cl
+                    -->
+
+                    <div id='product-component-1639347903011'></div>
+                    <script type="text/javascript">
+                    /*<![CDATA[*/
+                    (function () {
+                      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+                      if (window.ShopifyBuy) {
+                        if (window.ShopifyBuy.UI) {
+                          ShopifyBuyInit();
+                        } else {
+                          loadScript();
+                        }
+                      } else {
+                        loadScript();
+                      }
+                      function loadScript() {
+                        var script = document.createElement('script');
+                        script.async = true;
+                        script.src = scriptURL;
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+                        script.onload = ShopifyBuyInit;
+                      }
+                      function ShopifyBuyInit() {
+                        var client = ShopifyBuy.buildClient({
+                          domain: 'dimpsey-somerset-gin.myshopify.com',
+                          storefrontAccessToken: '31d7e98eefae99434c75c2f5d8554c11',
+                        });
+                        ShopifyBuy.UI.onReady(client).then(function (ui) {
+                          ui.createComponent('product', {
+                            id: '7219273236642',
+                            node: document.getElementById('product-component-1639347903011'),
+                            moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
+                            options: {
+                      "product": {
+                        "styles": {
+                          "product": {
+                            "@media (min-width: 601px)": {
+                              "max-width": "calc(25% - 20px)",
+                              "margin-left": "20px",
+                              "margin-bottom": "50px"
+                            }
+                          },
+                          "button": {
+                            "font-family": "Arial, sans-serif",
+                            "font-size": "14px",
+                            "padding-top": "15px",
+                            "padding-bottom": "15px",
+                            "color": "#000000",
+                            ":hover": {
+                              "color": "#000000",
+                              "background-color": "#dd9d1d"
+                            },
+                            "background-color": "#f5ae20",
+                            ":focus": {
+                              "background-color": "#dd9d1d"
+                            },
+                            "border-radius": "0px",
+                            "padding-left": "14px",
+                            "padding-right": "14px"
+                          },
+                          "quantityInput": {
+                            "font-size": "14px",
+                            "padding-top": "15px",
+                            "padding-bottom": "15px"
+                          }
+                        },
+                        "contents": {
+                          "img": false,
+                          "button": false,
+                          "buttonWithQuantity": true,
+                          "title": false,
+                          "price": false
+                        },
+                        "text": {
+                          "button": "ADD TO BASKET"
+                        }
+                      },
+                      "productSet": {
+                        "styles": {
+                          "products": {
+                            "@media (min-width: 601px)": {
+                              "margin-left": "-20px"
+                            }
+                          }
+                        }
+                      },
+                      "modalProduct": {
+                        "contents": {
+                          "img": false,
+                          "imgWithCarousel": true,
+                          "button": false,
+                          "buttonWithQuantity": true
+                        },
+                        "styles": {
+                          "product": {
+                            "@media (min-width: 601px)": {
+                              "max-width": "100%",
+                              "margin-left": "0px",
+                              "margin-bottom": "0px"
+                            }
+                          },
+                          "button": {
+                            "font-family": "Arial, sans-serif",
+                            "font-size": "14px",
+                            "padding-top": "15px",
+                            "padding-bottom": "15px",
+                            "color": "#000000",
+                            ":hover": {
+                              "color": "#000000",
+                              "background-color": "#dd9d1d"
+                            },
+                            "background-color": "#f5ae20",
+                            ":focus": {
+                              "background-color": "#dd9d1d"
+                            },
+                            "border-radius": "0px",
+                            "padding-left": "14px",
+                            "padding-right": "14px"
+                          },
+                          "quantityInput": {
+                            "font-size": "14px",
+                            "padding-top": "15px",
+                            "padding-bottom": "15px"
+                          }
+                        },
+                        "text": {
+                          "button": "Add to cart"
+                        }
+                      },
+                      "option": {},
+                      "cart": {
+                        "styles": {
+                          "button": {
+                            "font-family": "Arial, sans-serif",
+                            "font-size": "14px",
+                            "padding-top": "15px",
+                            "padding-bottom": "15px",
+                            "color": "#000000",
+                            ":hover": {
+                              "color": "#000000",
+                              "background-color": "#dd9d1d"
+                            },
+                            "background-color": "#f5ae20",
+                            ":focus": {
+                              "background-color": "#dd9d1d"
+                            },
+                            "border-radius": "0px"
+                          },
+                          "title": {
+                            "color": "#000000"
+                          },
+                          "header": {
+                            "color": "#000000"
+                          },
+                          "lineItems": {
+                            "color": "#000000"
+                          },
+                          "subtotalText": {
+                            "color": "#000000"
+                          },
+                          "subtotal": {
+                            "color": "#000000"
+                          },
+                          "notice": {
+                            "color": "#000000"
+                          },
+                          "currency": {
+                            "color": "#000000"
+                          },
+                          "close": {
+                            "color": "#000000",
+                            ":hover": {
+                              "color": "#000000"
+                            }
+                          },
+                          "empty": {
+                            "color": "#000000"
+                          },
+                          "noteDescription": {
+                            "color": "#000000"
+                          },
+                          "discountText": {
+                            "color": "#000000"
+                          },
+                          "discountIcon": {
+                            "fill": "#000000"
+                          },
+                          "discountAmount": {
+                            "color": "#000000"
+                          },
+                          "cart": {
+                            "background-color": "#fffef2"
+                          },
+                          "footer": {
+                            "background-color": "#fffef2"
+                          }
+                        },
+                        "text": {
+                          "title": "Basket",
+                          "total": "Subtotal",
+                          "empty": "Your basket is empty.",
+                          "notice": "Shipping is added at checkout.",
+                          "button": "Checkout",
+                          "noteDescription": "IS THIS A GIFT? \nLET US KNOW IF YOU WANT US TO INCLUDE A MESSAGE"
+                        },
+                        "contents": {
+                          "note": true
+                        },
+                        "popup": false
+                      },
+                      "toggle": {
+                        "styles": {
+                          "toggle": {
+                            "font-family": "Arial, sans-serif",
+                            "background-color": "#f5ae20",
+                            ":hover": {
+                              "background-color": "#dd9d1d"
+                            },
+                            ":focus": {
+                              "background-color": "#dd9d1d"
+                            }
+                          },
+                          "count": {
+                            "font-size": "14px",
+                            "color": "#000000",
+                            ":hover": {
+                              "color": "#000000"
+                            }
+                          },
+                          "iconPath": {
+                            "fill": "#000000"
+                          }
+                        }
+                      },
+                      "lineItem": {
+                        "styles": {
+                          "variantTitle": {
+                            "color": "#000000"
+                          },
+                          "title": {
+                            "color": "#000000"
+                          },
+                          "price": {
+                            "color": "#000000"
+                          },
+                          "fullPrice": {
+                            "color": "#000000"
+                          },
+                          "discount": {
+                            "color": "#000000"
+                          },
+                          "discountIcon": {
+                            "fill": "#000000"
+                          },
+                          "quantity": {
+                            "color": "#000000"
+                          },
+                          "quantityIncrement": {
+                            "color": "#000000",
+                            "border-color": "#000000"
+                          },
+                          "quantityDecrement": {
+                            "color": "#000000",
+                            "border-color": "#000000"
+                          },
+                          "quantityInput": {
+                            "color": "#000000",
+                            "border-color": "#000000"
+                          }
+                        }
+                      }
+                    },
+                          });
+                        });
+                      }
+                    })();
+                    /*]]>*/
+                    </script>
+
+                    <!--
+                      End button for Dimpsey 5cl
+                    -->
+
+                    <p><strong>£4.50 or 5 for £20</strong> <small>Baubles (5cl)</small></p>
+
+                  </div><!-- /.fifty-button -->
+
+                  <p>Orders despatched and collections made between Thurs-Sat</p>
+                  <p>Local collection from Still Shed Distillery is available</p>
 
               </div><!-- /.row -->
             </div><!-- /.description -->
@@ -488,7 +768,7 @@
             <ul>
               <li>60ml Dimpsey Somerset Gin</li>
               <li>15ml dry vermouth</li>
-              <li>2 dashes of Grapefruit bitters</li>
+              <li>2 dashes of aromatic bitters</li>
               <li>Fresh lemon zest</li>
             </ul>
 
