New button and update some info

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     Shopify button for 70cl Dimpsey
                     -->
 
-                    <div id='product-component-1633952712451'></div>
+                    <div id='product-component-1639386118483'></div>
                     <script type="text/javascript">
                     /*<![CDATA[*/
                     (function () {
@@ -201,7 +201,7 @@
                           ui.createComponent('product', {
                             id: '7009929461922',
                               variantId: '40636439658658',
-                            node: document.getElementById('product-component-1633952712451'),
+                            node: document.getElementById('product-component-1639386118483'),
                             moneyFormat: '%C2%A3%7B%7Bamount%7D%7D',
                             options: {
                       "product": {
@@ -239,6 +239,8 @@
                         },
                         "contents": {
                           "img": false,
+                          "button": false,
+                          "buttonWithQuantity": true,
                           "title": false,
                           "price": false,
                           "options": false
@@ -371,7 +373,9 @@
                           "title": "Basket",
                           "total": "Subtotal",
                           "empty": "Your basket is empty.",
-                          "button": "Checkout"
+                          "notice": "Shipping is added at checkout.",
+                          "button": "Checkout",
+                          "noteDescription": "IS THIS A GIFT? \nLET US KNOW IF YOU WANT US TO INCLUDE A MESSAGE"
                         },
                         "contents": {
                           "note": true
@@ -809,7 +813,7 @@
           <div class="col-lg-7 distillery-description">
 
             <h2 class="featurette-heading">Where it's made</h2>
-            <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted barn, Still Shed Distillery.</p>
+            <p class="lead">Dimpsey Somerset Gin is lovingly hand-crafted in our converted stable, Still Shed Distillery.</p>
 
             <p>Our distillery's location is as rural as the taste of our Somerset Gin, nestled amongst brambles and fields, Dimpsey Somerset Gin is distilled in
               our copper pot stills, using only the finest, locally sourced botanicals - most of which we grow ourselves!</p>
