--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -5,32 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dimpsey Somerset Gin is distilled in traditional copper stills, using locally foraged botanicals and Cheddar spring water">
     <meta name="author" content="Tommy">
-    <title>Terms & Conditions</title>
+    <title>Dimpsey Somerset Gin - Terms & Conditions</title>
     <link rel="canonical" href="https://dimpseygin.co.uk" />
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="format-detection" content="telephone=no">
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./fonts/uppereastside_regular_macroman/stylesheet.css" type="text/css" />
+    <link rel="stylesheet" href="./fonts/texgyreadventor_regular_macroman/stylesheet.css" type="text/css" />
     <link href="dimpsey.css" rel="stylesheet">
   </head>
   <body data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-offset="0" tabindex="0">
 
+  <!-- Age Verification Modal -->
+  <div class="modal" id="ageModal" role="dialog" aria-labelledby="gridSystemModalLabel" data-backdrop="static"
+       data-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12" id="modal-age-limit" style="margin-bottom: 2.5rem;
+            color: #fff;">
+              <h3 class="hidden-xs"><strong>Are you of legal drinking age?</strong></h3>
+              <img class="img-fluid" alt="Dimpsey Somerset Gin illustration" src="./images/botanicals/juniper.png" />
+            </div>
+            <p>By entering this site, you acknowledge that you have read, understood and consent to our <a href="terms-and-conditions.html" target="_blank">Terms & Conditions</a> and <a href="privacy-and-cookies.html" target="_blank">Privacy & Cookie Policy</a>.</p>
+            <div class="col-xs-12 col-lg-12" id="age-submit-area" style="margin-top: 2rem;
+            color: #fff;">
+              <a href="#" class="btn btn-default" onclick="oldEnough()" id="age-submit">Yes, Enter</a>
+              <a href="https://www.drinkaware.co.uk/facts/alcohol-and-the-law/the-law-on-alcohol-and-under-18s" class="btn btn-default">No, Exit</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
     <header>
       <nav id="main-nav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Dimpsey Somerset Gin</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <a class="navbar-brand" href="index.html"><span class="dimpsey">Dimpsey</span></a>
+          </div>
         </div>
       </nav>
     </header>
 
-    <main>
+    <main class="terms">
 
         <br/>
 
@@ -47,7 +81,7 @@
               <p>Please read these terms and conditions carefully before using the Dimpsey Gin online shop.</p>
               <p>This website is owned and operated by Still Shed Distillery Limited VAT Reg No. GB 379 5567 32, Company No. 13305580</p>
 
-              <h2>Buying Products On Our Website</h2>
+              <h2 class="featurette-heading">Buying Products On Our Website</h2>
               <p>By placing an order with Still Shed Distillery, you acknowledge to have read and agreed to these Terms and Conditions.
                 If you are unhappy with any aspect of these, then you should contact us at distillery@stillshed.co.uk before placing your order with us.</p>
 
@@ -55,11 +89,11 @@
                 Once payment has been received, we will confirm that your order has been accepted by sending an email to you at the email address you have provided
                 to us when making an order. Our acceptance of your order brings into existence a legally binding contract between us.</p>
 
-              <h2>Age of Consent</h2>
+              <h2 class="featurette-heading">Age of Consent</h2>
               <p>By using this site, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of
                 majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.</p>
 
-              <h2>Processing Your Order</h2>
+              <h2 class="featurette-heading">Processing Your Order</h2>
               <p>Our standard spirit delivery is 2-4 working days. Orders are currently despatched between Thursday and Saturday. As we use a third party courier, on occasion we do experience some breakages which may delay your order.</p>
 
               <p>We require a signature for any goods delivered, at which point responsibility for your purchased goods passes to you. If you have specified a
@@ -79,13 +113,13 @@
                 within the UK we do not offer this service for Jersey, Guernsey, The Orkney Islands, The Isle of Scilly, Ireland, The Highlands, The Isle of Wight
                 and The Isle of Man. Please contact us directly on 07469 931 116 for advice on delivery to these locations.</p>
 
-              <h2>Availability</h2>
+              <h2 class="featurette-heading">Availability</h2>
               <p>All items are subject to availability. We will inform and refund you as soon as possible if the goods you have ordered are not available.</p>
 
-              <h2>Delivery, Returns & Exchanges</h2>
+              <h2 class="featurette-heading">Delivery, Returns & Exchanges</h2>
               <p>Please refer to our <a href="delivery-and-returns.html">Delivery & Returns Page</a> for more information</p>
 
-              <h2>Pick Up Purchases from Still Shed Distllery</h2>
+              <h2 class="featurette-heading">Pick Up Purchases from Still Shed Distllery</h2>
               <p>You are more than welcome to pick up your online purchase from the distillery by selecting the option when checking out.</p>
               <p>The distillery address and opening times are:</p>
               <p>Still Shed Distillery &middot; <a target="_blank" href="https://www.google.com/maps/place/Still+Shed+Distillery/@51.2763115,-2.9718698,20.09z/data=!4m18!1m12!4m11!1m6!1m2!1s0x487203c562d5c7a5:0x5dae1338581d1f1d!2sStill+Shed+Distillery,+Wick+Lane,+Weston-super-Mare!2m2!1d-2.9716215!2d51.2763256!1m3!2m2!1d-2.9716218!2d51.2763204!3m4!1s0x487203c562d5c7a5:0x5dae1338581d1f1d!8m2!3d51.2763256!4d-2.9716215">Get Directions</a> <br/>
@@ -99,7 +133,7 @@
               Wednesday - Friday: 10am - 5:30pm<br/>
               Saturday: 10am - 7pm</p>
 
-              <h2>Jurisdiction</h2>
+              <h2 class="featurette-heading">Jurisdiction</h2>
               <p>This website, these terms and conditions and any contract entered into as a result of usage of this website are governed by and construed in
                 accordance with English Law. The parties to any such contract agree to submit to the exclusive jurisdiction of the courts of England and Wales.</p>
 
