--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <p>Fragrant mandarin, grapefruit & cinnamon</p>
                 </div>
                 <div class="col-lg-4">
-                  <h3><strong>Palette</strong></h3>
+                  <h3><strong>Palate</strong></h3>
                   <p>Smooth & Full-bodied, balanced with grapefruit and mandarin peel freshness</p>
                 </div>
                 <div class="col-lg-4">
