Finish off privacy policy and add social media info

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#whereItsMade">Where it's Made</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#followUs">Follow Us</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -834,6 +837,38 @@
         <hr class="featurette-divider">
 
       </div><!-- /.distillery -->
+
+      <div id="followUs" class="container social-media">
+        <div class="row">
+
+          <div class="col-lg-12 follow-us-description">
+
+            <h2 class="featurette-heading">Follow us</h2>
+
+            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div><!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
+            /* curator-feed-default-feed-layout */
+            (function(){
+            var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+            i.src="https://cdn.curator.io/published/9c8a6623-a2f8-4918-ae06-c2e00123f9c7.js";
+            e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+            })();
+            </script>
+            
+
+          </div><!-- /.col-lg-6 follow-us-description -->
+
+          <div class="col-lg-12 social-media-icons">
+            <a href="https://facebook.com/dimpseygin" target="_blank"><img src="images/social-media-icons/facebook.svg" alt="Facebook icon"></a>
+            <a href="https://instagram.com/dimpseygin" target="_blank"><img src="images/social-media-icons/instagram.svg" alt="instagram icon"></a>
+          </div>
+            
+          </div>
+
+        </div>
+
+        <hr class="featurette-divider">
+
+      </div><!-- /.social-media -->
 
 
       <!-- FOOTER -->
