Updating some things

--- a/index.html
+++ b/index.html
@@ -773,11 +773,11 @@
 
           <div class="col-lg-6 drink-one">
 
-            <h2 class="featurette-heading">Dimpsey Martini</h2>
+            <h2 class="featurette-heading">Martini</h2>
             <p class="lead">Ingredients</p>
             <ul>
-              <li>60ml Dimpsey Somerset Gin</li>
-              <li>15ml dry vermouth</li>
+              <li>50ml Dimpsey Somerset Gin Original</li>
+              <li>10ml dry vermouth</li>
               <li>2 dashes of aromatic bitters</li>
               <li>Fresh lemon zest</li>
             </ul>
@@ -791,24 +791,28 @@
 
           </div><!-- /.col-lg-6 main-image -->
 
-         <!--  <div class="col-lg-6 drink-two">
+          <div class="col-lg-6 drink-two">
 
-            <h2 class="featurette-heading">Mulled Dimpsey</h2>
+            <h2 class="featurette-heading">Dimpsey Sour</h2>
             <p class="lead">Ingredients</p>
             <ul>
-              <li>100ml Dimpsey Somerset Gin</li>
-              <li>400ml apple juice</li>
-              <li>1 bay leaf, 4 cloves, 2 cardamom pods, 1 cinnamon stick, 1/2 tsp corriander seeds and 1 tsp runny honey</li>
+              <li>50ml Dimpsey Somerset Gin Original</li>
+              <li>25ml fresh lemon juice</li>
+              <li>15ml simple syrup</li>
+              <li>6 segments of mandarin</li>
+              <li>1 egg white / vegan alternative</li>
             </ul>
 
             <p class="lead">Instructions</p>
             <ul>
-              <li>Divide the Dimpsey between four small heatproof glasses</li>
-              <li>Tip the apple juice into a saucepan with the rest of the ingedients. Heat gently until simmering, then strain in to a jug</li>
-              <li>Pour the mulled apple juice into the glasses with the gin and stir gently to combine</li>
+              <li>Muddle the mandarin segments in a shaker to release the juice</li>
+              <li>Add the other ingredients and first shake without using ice for 30 seconds</li>
+              <li>Then put some ice into the shaker and shake again for another 15 seconds (This shaking method will give you some silky foam)</li>
+              <li>Fine strain into a glass of your choice over ice and garnish with some mandarin segments</li>
+
             </ul>
 
-          </div> --><!-- /.col-lg-6 description -->
+          </div><!-- /.col-lg-6 description -->
         </div><!-- /.row -->
       </div><!-- /.marketing -->
 
@@ -845,13 +849,15 @@
 
             <h2 class="featurette-heading">Follow us</h2>
 
-            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div><!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
-            /* curator-feed-default-feed-layout */
-            (function(){
-            var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
-            i.src="https://cdn.curator.io/published/9c8a6623-a2f8-4918-ae06-c2e00123f9c7.js";
-            e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-            })();
+            <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+            <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+            <script type="text/javascript">
+              /* curator-feed-default-feed-layout */
+              (function(){
+              var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+              i.src="https://cdn.curator.io/published/9c8a6623-a2f8-4918-ae06-c2e00123f9c7.js";
+              e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+              })();
             </script>
             
 
