Updating nav and adding taste of west gold award

--- a/original.html
+++ b/original.html
@@ -94,19 +94,18 @@
     <header>
       <nav id="main-nav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand d-lg-none" href="#"><span class="dimpsey">Dimpsey</span></a>
+          <a class="navbar-brand" href="#"><span class="dimpsey">Dimpsey</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0 mx-auto">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
                 <a class="nav-link" href="#theGin">The Gin</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#howToDrink">How to Drink it</a>
               </li>
-              <a class="navbar-brand d-none d-lg-block" href="#"><span class="dimpsey">Dimpsey</span></a>
               <li class="nav-item">
                 <a class="nav-link" href="#whereItsMade">Where it's Made</a>
               </li>
@@ -124,6 +123,8 @@
       <div class="animated-illustration">
         <img class="img-fluid d-none d-md-block" alt="Dimpsey Somerset Gin illustration" src="./images/main.png" />
         <img class="img-fluid d-block d-sm-none main-mobile"  alt="Dimpsey Somerset Gin illustration" src="./images/main-mobile.png" />
+        <h1 class="centered d-none d-md-block">DIMPSEY</h1>
+        <p class="centered d-none d-md-block">SOMERSET GIN</p>
       </div>
 
       <hr class="featurette-divider">
@@ -143,7 +144,6 @@
 
             <div class="col-lg-6 main-image">
               <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
-              <img class="taste-of-the-west-gold" alt="Taste of the West Gold 2022" src="./images/TOTW_Gold_2022.png" />
             </div><!-- /.col-lg-6 main-image -->
 
             <div class="col-lg-6 description">
