Add fontawesome icons for social media links and update responsive styles for award

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="format-detection" content="telephone=no">
 
+    <script src="https://kit.fontawesome.com/8d02c00bc5.js" crossorigin="anonymous"></script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org/",
@@ -847,7 +849,7 @@
 
           <div class="col-lg-12 follow-us-description">
 
-            <h2 class="featurette-heading">Follow us</h2>
+            <h2 class="featurette-heading">Follow us <a href="https://facebook.com/dimpseygin" target="_blank"><i class="fa-brands fa-facebook-f"></i></a> | <a href="https://instagram.com/dimpseygin" target="_blank"><i class="fa-brands fa-instagram"></i></a></h2>
 
             <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
             <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
@@ -860,16 +862,8 @@
               })();
             </script>
             
-
           </div><!-- /.col-lg-6 follow-us-description -->
-
-          <div class="col-lg-12 social-media-icons">
-            <a href="https://facebook.com/dimpseygin" target="_blank"><img src="images/social-media-icons/facebook.svg" alt="Facebook icon"></a>
-            <a href="https://instagram.com/dimpseygin" target="_blank"><img src="images/social-media-icons/instagram.svg" alt="instagram icon"></a>
-          </div>
             
-          </div>
-
         </div>
 
         <hr class="featurette-divider">
