Some new bits for the map and updated gurt blush images

--- a/gurt-blush.html
+++ b/gurt-blush.html
@@ -130,7 +130,7 @@
           <div class="row">
 
             <div class="col-lg-6 original">
-              <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
+              <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
             </div><!-- /.col-lg-6 main-image -->
 
             <div class="col-lg-6 description">
@@ -145,13 +145,13 @@
                 </div>
                 <div class="col-lg-4">
                   <h3><strong>Finish</strong></h3>
-                  <p>A long extra dry finish, smooth enough to enjoy on the rocks!</p>
+                  <p>A fresh finish, smooth enough to enjoy on the rocks!</p>
                 </div>
               </div>
 
               <p>Our award winning original dry gin is infused with fresh strawberries and raspberries for 48 hours. Fill a glass with lots of ice, top with a premium tonic, soda water or sparkling lemonade and a a few fresh strawberries or raspberries to garnish.</p>
 
-              <p><strong>Please note:</strong> the spirit takes the natural colouring from the fruit and therefore will eventually fade. To maintain the colour, please store in a dark place, away from sunlight.</p>
+              <p><strong>Please note: the spirit takes the natural colouring from the fruit and therefore will eventually fade. To maintain the colour, please store in a dark place, away from sunlight.</strong></p>
 
               <p>Hand crafted in very small batches of 60 bottles, filled, labelled and numbered by hand.</p>
 
@@ -746,63 +746,13 @@
                   </div><!-- /.fifty-button -->
                 </div>
 
-                  <p>Orders despatched and collections made between Thurs-Sat</p>
-                  <p>Local collection from Still Shed Distillery is available</p>
+                <p class="small"><strong>Free Delivery Within 6 Miles! (Select Local Delivery at Checkout)<strong></p>  
 
               </div><!-- /.row -->
             </div><!-- /.description -->
           </div><!-- /.row -->
         </div><!-- /.marketing -->
 
-      <div id="howToDrink" class="container how-to-drink">
-
-        <hr class="featurette-divider">
-
-        <div class="row">
-
-          <div class="col-lg-6 drink-one">
-
-            <h2 class="featurette-heading">Martini</h2>
-            <p class="lead">Ingredients</p>
-            <ul>
-              <li>50ml Dimpsey Somerset Gin Original</li>
-              <li>10ml dry vermouth</li>
-              <li>2 dashes of aromatic bitters</li>
-              <li>Fresh lemon zest</li>
-            </ul>
-
-            <p class="lead">Instructions</p>
-            <ul>
-              <li>Add gin and vermouth to a mixing glass filled with ice</li>
-              <li>Stir well and strain into a martini glass</li>
-              <li>Add the Grapefuit bitters and finish with lemon zest</li>
-            </ul>
-
-          </div><!-- /.col-lg-6 main-image -->
-
-          <div class="col-lg-6 drink-two">
-
-            <h2 class="featurette-heading">Dimpsey Sour</h2>
-            <p class="lead">Ingredients</p>
-            <ul>
-              <li>50ml Dimpsey Somerset Gin Original</li>
-              <li>25ml fresh lemon juice</li>
-              <li>15ml simple syrup</li>
-              <li>6 segments of mandarin</li>
-              <li>1 egg white / vegan alternative</li>
-            </ul>
-
-            <p class="lead">Instructions</p>
-            <ul>
-              <li>Muddle the mandarin segments in a shaker to release the juice</li>
-              <li>Add the other ingredients and first shake without using ice for 30 seconds</li>
-              <li>Then put some ice into the shaker and shake again for another 15 seconds (This shaking method will give you some silky foam)</li>
-              <li>Fine strain into a glass of your choice over ice and garnish with some mandarin segments</li>
-
-            </ul>
-
-          </div><!-- /.col-lg-6 description -->
-        </div><!-- /.row -->
       </div><!-- /.marketing -->
 
       <div class="container">
@@ -814,7 +764,7 @@
 
             <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
             <img class="taste-of-the-west-gold-product-page gurt-blush" alt="Taste of the West Gold 2022" src="./images/TOTW_Gold_2022.png" />
-            <a href="original.html"><button type="button" class="btn">More</button></a>
+            <a href="original.html"><button type="button" class="btn">Buy</button></a>
 
           </div><!-- /.col-lg-6 youMayAlsoLike -->
 
