--- a/original.html
+++ b/original.html
@@ -745,8 +745,7 @@
                   </div><!-- /.fifty-button -->
                 </div>
 
-                  <p>Orders despatched and collections made between Thurs-Sat</p>
-                  <p>Local collection from Still Shed Distillery is available</p>
+                  <p class="small"><strong>Free Delivery Within 6 Miles! (Select Local Delivery at Checkout)<strong></p>
 
               </div><!-- /.row -->
             </div><!-- /.description -->
@@ -811,8 +810,8 @@
           <h2 class="featurette-heading">You may also like</h2>
           <div class="col-lg-12 youMayAlsoLike">
 
-            <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
-            <a href="gurt-blush.html"><button type="button" class="btn">More</button></a>
+            <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
+            <a href="gurt-blush.html"><button type="button" class="btn">Buy</button></a>
 
           </div><!-- /.col-lg-6 distillery-description -->
 
