Open Graph protocol for Facebook post improvements

--- a/gurt-blush.html
+++ b/gurt-blush.html
@@ -149,7 +149,7 @@
                 </div>
               </div>
 
-              <p>Our award winning original dry gin is infused with fresh strawberries and raspberries for 48 hours. Fill a glass with lots of ice, top with a premium tonic, soda water or sparkling lemonade and a a few fresh strawberries or raspberries to garnish.</p>
+              <p>Our award winning original dry gin is infused with fresh strawberries and raspberries for 2 days. Fill a glass with lots of ice, top with a premium tonic or sparkling lemonade and a few fresh strawberries or raspberries to garnish.</p>
 
               <p><strong>Please note: the spirit takes the natural colouring from the fruit and therefore will eventually fade. To maintain the colour, please store in a dark place, away from sunlight.</strong></p>
 
