--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html prefix="og: https://ogp.me/ns#" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,12 @@
     <meta name="author" content="Tommy">
     <title>Dimpsey Somerset Gin</title>
     <link rel="canonical" href="https://dimpseygin.co.uk" />
+
+    <meta property="og:title" content="Dimpsey Somerset Gin" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dimpseygin.co.uk" />
+    <meta property="og:image" content="https://dimpseygin.co.uk/images/original_and_gurt_blush.png" />
+    <meta property="og:description" content="Dimpsey Somerset Gin is hand-crafted with traditional copper pot stills at Dimpsey (that's old Somerset for the light before dusk), at the foot of the Mendip Hills, using locally sourced botanicals and Cheddar spring water." />
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -132,8 +138,7 @@
 
         <div id="theGin" class="container quote">
           <blockquote class="blockquote text-center">
-            <p>Using traditional copper pot stills, just before Dimpsey (that’s old Somerset for sunset), at the foot of the Mendip Hills, <br />
-              using locally sourced botanicals and Cheddar spring water, this is <br />  Dimpsey Somerset Gin.</p>
+            <p>Dimpsey Somerset Gin is hand-crafted with traditional copper pot stills at Dimpsey (that's old Somerset for the light before dusk), <br /> at the foot of the Mendip Hills, using locally sourced botanicals and Cheddar spring water.</p>
           </blockquote>
         </div>
 
