--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
     <main>
 
       <div class="animated-illustration">
-        <img class="img-fluid d-none d-md-block" alt="Dimpsey Somerset Gin illustration" src="./images/main.png" />
-        <img class="img-fluid d-block d-sm-none main-mobile"  alt="Dimpsey Somerset Gin illustration" src="./images/main-mobile.png" />
+        <img class="img-fluid" alt="Dimpsey Somerset Gin illustration" src="./images/main.jpg" />
       </div>
 
       <hr class="featurette-divider">
